syntax = "proto3";

package domain.metadata.v1;

option go_package = "github.com/shortlink-org/shortlink/boundaries/link/metadata/domain/metadata/v1";

import "google/protobuf/field_mask.proto";

// Meta is the metadata for a shortlink
message Meta {
  // Field mask
  google.protobuf.FieldMask field_mask = 5;

  // ID is the ID of the shortlink
  string id = 1;
  // Title is the title of the shortlink
  string image_url = 2;
  // Description is the description of the shortlink
  string description = 3;
  // Keywords is the keywords of the shortlink
  string keywords = 4;
}
